--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
     <div class="header">
         <div class="inner_header">
             <div class="logo">
+                <img src="Hospital Logo.jpeg" alt="Jayadeva Hospitals Logo" />
                 <h1>Jayadeva <span>Hospitals</span></h1>
             </div>
 
