--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
                 </li>
                 <a href="#"><li>Home</li></a>
                 <a href="#"><li>Contact us</li></a>
-                <a href="#"><li>About us</li></a>
+                <a href="abtus.html"><li>About us</li></a>
                 
             </ul>
         </div>
