--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jayadeva Hospitals</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <!-- NavBar -->
@@ -202,5 +203,54 @@
 </section>
 
 <!-- doctors section ends -->
+<!-- footer section starts -->
+ <section>
+    <div>
+        <footer class="footer-hack">
+            <div class="container-hack">
+                <div class="footer-row">
+                    <div class="footer-col">
+                        <h4>contact</h4>
+                        <ul>
+                            <li><a href="#">info@jayadevacardiology.com</a></li>
+                            <li><a href="#">phone:+91-80-2297-7400 (general)</a></li>
+                            <li><a href="#">+91-80-2297-7202 / 679 (24 Hours)</a></li>
+                            <li><a href="#">location:Bengaluru,Mysuru,Kalaburgi</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>overview</h4>
+                        <ul>
+                            <li><a href="abtus.html">about us</abtus></a></li>
+                            <li><a href="services.html">services</a></li>
+                            <li><a href="team.html">our team</a></li>
+                            
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>get help</h4>
+                        <ul>
+                            <li><a href="#">Insurance Information</a></li>
+                <li><a href="#">Patient Rights</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Visitor Information</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>follow us</h4>
+                        <div class="social-links">
+                            <a href=""><i class="fab fa-instagram"></i></a>
+                            <a href=""><i class="fab fa-facebook"></i></a>
+                            <a href=""><i class="fab fa-github"></i></a>
+                            <a href=""><i class="fab fa-linkedin"></i></a>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+        </footer> 
+    </div>
+   
+ </section>
+ <!-- footer section ends -->
 </body>
 </html>
