--- a/Index.html
+++ b/Index.html
@@ -212,55 +212,6 @@
 
 <!-- doctors section ends -->
 
-<!-- footer section starts -->
- <section>
-    <div>
-        <footer class="footer-hack">
-            <div class="container-hack">
-                <div class="footer-row">
-                    <div class="footer-col">
-                        <h4>contact</h4>
-                        <ul>
-                            <li><a href="#">info@jayadevacardiology.com</a></li>
-                            <li><a href="#">phone:+91-80-2297-7400 (general)</a></li>
-                            <li><a href="#">+91-80-2297-7202 / 679 (24 Hours)</a></li>
-                            <li><a href="#">location:Bengaluru,Mysuru,Kalaburgi</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h4>overview</h4>
-                        <ul>
-                            <li><a href="abtus.html">about us</abtus></a></li>
-                            <li><a href="services.html">services</a></li>
-                            <li><a href="team.html">our team</a></li>
-                            
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h4>get help</h4>
-                        <ul>
-                            <li><a href="#">Insurance Information</a></li>
-                <li><a href="#">Patient Rights</a></li>
-                <li><a href="#">FAQs</a></li>
-                <li><a href="#">Visitor Information</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h4>follow us</h4>
-                        <div class="social-links">
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href=""><i class="fab fa-facebook"></i></a>
-                            <a href=""><i class="fab fa-github"></i></a>
-                            <a href=""><i class="fab fa-linkedin"></i></a>
-                        </div> 
-                    </div>
-                </div>
-            </div>
-        </footer> 
-    </div>
-   
- </section>
- <!-- footer section ends -->
 
 
 <section class="pt-5 pb-5">
@@ -447,6 +398,56 @@
         </div>
     </div>
 </section>
+
+<!-- footer section starts -->
+<section>
+    <div>
+        <footer class="footer-hack">
+            <div class="container-hack">
+                <div class="footer-row">
+                    <div class="footer-col">
+                        <h4>contact</h4>
+                        <ul>
+                            <li><a href="#">info@jayadevacardiology.com</a></li>
+                            <li><a href="#">phone:+91-80-2297-7400 (general)</a></li>
+                            <li><a href="#">+91-80-2297-7202 / 679 (24 Hours)</a></li>
+                            <li><a href="#">location:Bengaluru,Mysuru,Kalaburgi</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>overview</h4>
+                        <ul>
+                            <li><a href="abtus.html">about us</abtus></a></li>
+                            <li><a href="services.html">services</a></li>
+                            <li><a href="team.html">our team</a></li>
+                            
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>get help</h4>
+                        <ul>
+                            <li><a href="#">Insurance Information</a></li>
+                <li><a href="#">Patient Rights</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Visitor Information</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>follow us</h4>
+                        <div class="social-links">
+                            <a href=""><i class="fab fa-ERROR"></i></a>
+                            <a href=""><i class="fab fa-facebook"></i></a>
+
+                        </div> 
+                    </div>
+                </div>
+            </div>
+        </footer> 
+    </div>
+   
+ </section>
+ <!-- footer section ends -->
+
 
 <!-- JavaScript dependencies -->
  <script src="<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>"></script>
