--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
             
                     <div class="dropdown-content">
                         <a href="#">Follow up</a>
-                        <a href="#">Diseases</a>
+                        <a href="disease1.html">Diseases</a>
                         <a href="#">Testimonials</a>
                     </div>
                 </li>
@@ -245,13 +245,13 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card">
-                                        <img class="img-fluid" 
+                                        <a href="disease1.html"><img  class="img-fluid" 
                                              alt="100%x280"
                                             src=
-"pics/Diseases.jpg">
+"pics/Diseases.jpg" ></a>
                                         <div class="card-body">
                                             <h4 class="card-title">
-                                              Diseases</h4>
+                                              Diseases </h4>
                                             <p class="card-text">With supporting text
                                                                    below as a natural lead-in</p>
 
