Custom Chatbot Integrated

--- a/Index.html
+++ b/Index.html
@@ -459,7 +459,7 @@
 <script type="text/javascript"
     src=
 "https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-</body>
+<script src="https://bot.orimon.ai/deploy/index.js" tenantId="b085705b-6c5b-429c-9f4c-5b51ff651f77"></script>
 
 </body>
 </html>
