--- a/Index.html
+++ b/Index.html
@@ -74,6 +74,7 @@
 </section>
 
 <!-- icons section ends -->
+
  <!-- services section starts  -->
 
 <section class="services" id="services">
@@ -167,7 +168,7 @@
         <div class="box">
             <img src="./pics/thumb_Dr.-Jayaprakash-Shenthar.jpg" alt="">
             <h3>izzie stevens</h3>
-            <span>dermatologist</span>
+            <span>cardiologist</span>
         </div>
 
         <div class="box">
