--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
         <div class="inner_header">
             <div class="logo">
                 <img src="Hospital Logo.jpeg" alt="Jayadeva Hospitals Logo" />
-                <h1>Jayadeva <span>Hospitals</span></h1>
+                <h1>Jayadeva Hospitals</h1>
             </div>
 
             <ul class="navigation">
