--- a/Index.html
+++ b/Index.html
@@ -443,7 +443,10 @@
                         <h4>contact</h4>
                         <ul>
                             <li><a href="#">info@jayadevacardiology.com</a></li>
-                            <li><a href="#">phone:+91-80-2297-7400 (general)</a></li>
+                            <li><a href="tel:+918022977400">phone: +91-80-2297-7400 (general)</a></li>
+
+
+
                             <li><a href="#">+91-80-2297-7202 / 679 (24 Hours)</a></li>
                             <li><a href="#">location:Bengaluru,Mysuru,Kalaburgi</a></li>
                         </ul>
