--- a/Index.html
+++ b/Index.html
@@ -443,8 +443,9 @@
                     <div class="footer-col">
                         <h4>follow us</h4>
                         <div class="social-links">
-                            <a href=""><i class="fab fa-ERROR"></i></a>
+                            <a href=""><i class="fab fa-linkedin-in"></i></a>
                             <a href=""><i class="fab fa-facebook"></i></a>
+                            <a href=""><i class="fab fa-wikipedia-w"></i></a>
                             
                         </div> 
                     </div>
