--- a/Index.html
+++ b/Index.html
@@ -292,10 +292,10 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card">
-                                        <img class="img-fluid" 
+                                        <a href="https://maps.app.goo.gl/a8PBitb3HxDs32Tz8"><img class="img-fluid" 
                                              alt="100%x280"
                                             src=
-"pics/Map.jpg">
+"pics/Map.jpg"></a>
                                         <div class="card-body">
                                             <h4 class="card-title">Map</h4>
                                             <p class="card-text">Jayadeva Hospitals, across three locations, provide top-notch cardiac care with expert diagnosis, treatment, and rehabilitation for heart conditions, ensuring patient-centric services.At Jayadeva Hospitals, our mission is to prioritize patient well-being.</p>
@@ -445,7 +445,7 @@
                         <div class="social-links">
                             <a href=""><i class="fab fa-linkedin-in"></i></a>
                             <a href=""><i class="fab fa-facebook"></i></a>
-                            <a href=""><i class="fab fa-wikipedia-w"></i></a>
+                            <a href="https://en.wikipedia.org/wiki/Sri_Jayadeva_Institute_of_Cardiovascular_Sciences_and_Research"><i class="fab fa-wikipedia-w"></i></a>
                             
                         </div> 
                     </div>
